// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture regression > age map report is stable 1`] = `
{
  "ancientFiles": [
    {
      "ageInDays": 120,
      "file": "README.md",
      "lastCommitDate": "2026-01-01T09:00:00Z",
      "status": "ancient",
    },
    {
      "ageInDays": 120,
      "file": "package.json",
      "lastCommitDate": "2026-01-01T09:00:00Z",
      "status": "ancient",
    },
    {
      "ageInDays": 84,
      "file": "src/auth.ts",
      "lastCommitDate": "2026-02-05T23:15:00Z",
      "status": "ancient",
    },
    {
      "ageInDays": 70,
      "file": "src/config.ts",
      "lastCommitDate": "2026-02-20T08:30:00Z",
      "status": "ancient",
    },
  ],
  "files": [
    {
      "ageInDays": 120,
      "file": "README.md",
      "lastCommitDate": "2026-01-01T09:00:00Z",
      "status": "ancient",
    },
    {
      "ageInDays": 120,
      "file": "package.json",
      "lastCommitDate": "2026-01-01T09:00:00Z",
      "status": "ancient",
    },
    {
      "ageInDays": 84,
      "file": "src/auth.ts",
      "lastCommitDate": "2026-02-05T23:15:00Z",
      "status": "ancient",
    },
    {
      "ageInDays": 70,
      "file": "src/config.ts",
      "lastCommitDate": "2026-02-20T08:30:00Z",
      "status": "ancient",
    },
    {
      "ageInDays": 56,
      "file": "docs/USAGE.md",
      "lastCommitDate": "2026-03-05T14:00:00Z",
      "status": "stale",
    },
    {
      "ageInDays": 42,
      "file": "src/types.ts",
      "lastCommitDate": "2026-03-20T11:15:00Z",
      "status": "stale",
    },
    {
      "ageInDays": 36,
      "file": "src/__tests__/api.test.ts",
      "lastCommitDate": "2026-03-25T13:00:00Z",
      "status": "stale",
    },
    {
      "ageInDays": 30,
      "file": "src/helpers.ts",
      "lastCommitDate": "2026-04-01T08:00:00Z",
      "status": "aging",
    },
    {
      "ageInDays": 25,
      "file": "src/api.ts",
      "lastCommitDate": "2026-04-05T15:30:00Z",
      "status": "aging",
    },
    {
      "ageInDays": 25,
      "file": "src/index.ts",
      "lastCommitDate": "2026-04-05T15:30:00Z",
      "status": "aging",
    },
  ],
  "medianAgeDays": 56,
  "staleFiles": [
    {
      "ageInDays": 56,
      "file": "docs/USAGE.md",
      "lastCommitDate": "2026-03-05T14:00:00Z",
      "status": "stale",
    },
    {
      "ageInDays": 42,
      "file": "src/types.ts",
      "lastCommitDate": "2026-03-20T11:15:00Z",
      "status": "stale",
    },
    {
      "ageInDays": 36,
      "file": "src/__tests__/api.test.ts",
      "lastCommitDate": "2026-03-25T13:00:00Z",
      "status": "stale",
    },
  ],
  "summary": "4 files haven't been touched in over 62 days — they may be dead weight or critical infrastructure nobody dares touch",
}
`;

exports[`fixture regression > blast radius report is stable 1`] = `
{
  "files": [
    {
      "avgCoChangedFiles": 3,
      "blastScore": 100,
      "file": "README.md",
      "maxCoChangedFiles": 3,
      "totalCommits": 1,
    },
    {
      "avgCoChangedFiles": 3,
      "blastScore": 100,
      "file": "package.json",
      "maxCoChangedFiles": 3,
      "totalCommits": 1,
    },
    {
      "avgCoChangedFiles": 1.5,
      "blastScore": 50,
      "file": "src/config.ts",
      "maxCoChangedFiles": 3,
      "totalCommits": 4,
    },
    {
      "avgCoChangedFiles": 1.4,
      "blastScore": 47,
      "file": "src/index.ts",
      "maxCoChangedFiles": 3,
      "totalCommits": 5,
    },
    {
      "avgCoChangedFiles": 1.3,
      "blastScore": 42,
      "file": "src/api.ts",
      "maxCoChangedFiles": 2,
      "totalCommits": 4,
    },
    {
      "avgCoChangedFiles": 0.7,
      "blastScore": 22,
      "file": "src/helpers.ts",
      "maxCoChangedFiles": 2,
      "totalCommits": 6,
    },
    {
      "avgCoChangedFiles": 0,
      "blastScore": 0,
      "file": "src/__tests__/api.test.ts",
      "maxCoChangedFiles": 0,
      "totalCommits": 2,
    },
    {
      "avgCoChangedFiles": 0,
      "blastScore": 0,
      "file": "src/types.ts",
      "maxCoChangedFiles": 0,
      "totalCommits": 2,
    },
    {
      "avgCoChangedFiles": 0,
      "blastScore": 0,
      "file": "docs/USAGE.md",
      "maxCoChangedFiles": 0,
      "totalCommits": 1,
    },
    {
      "avgCoChangedFiles": 0,
      "blastScore": 0,
      "file": "src/auth.ts",
      "maxCoChangedFiles": 0,
      "totalCommits": 3,
    },
  ],
  "summary": "2 high blast-radius files (architectural load-bearers)",
  "topBlasters": [
    {
      "avgCoChangedFiles": 3,
      "blastScore": 100,
      "file": "README.md",
      "maxCoChangedFiles": 3,
      "totalCommits": 1,
    },
    {
      "avgCoChangedFiles": 3,
      "blastScore": 100,
      "file": "package.json",
      "maxCoChangedFiles": 3,
      "totalCommits": 1,
    },
    {
      "avgCoChangedFiles": 1.5,
      "blastScore": 50,
      "file": "src/config.ts",
      "maxCoChangedFiles": 3,
      "totalCommits": 4,
    },
    {
      "avgCoChangedFiles": 1.4,
      "blastScore": 47,
      "file": "src/index.ts",
      "maxCoChangedFiles": 3,
      "totalCommits": 5,
    },
    {
      "avgCoChangedFiles": 1.3,
      "blastScore": 42,
      "file": "src/api.ts",
      "maxCoChangedFiles": 2,
      "totalCommits": 4,
    },
    {
      "avgCoChangedFiles": 0.7,
      "blastScore": 22,
      "file": "src/helpers.ts",
      "maxCoChangedFiles": 2,
      "totalCommits": 6,
    },
    {
      "avgCoChangedFiles": 0,
      "blastScore": 0,
      "file": "src/__tests__/api.test.ts",
      "maxCoChangedFiles": 0,
      "totalCommits": 2,
    },
    {
      "avgCoChangedFiles": 0,
      "blastScore": 0,
      "file": "src/types.ts",
      "maxCoChangedFiles": 0,
      "totalCommits": 2,
    },
    {
      "avgCoChangedFiles": 0,
      "blastScore": 0,
      "file": "docs/USAGE.md",
      "maxCoChangedFiles": 0,
      "totalCommits": 1,
    },
    {
      "avgCoChangedFiles": 0,
      "blastScore": 0,
      "file": "src/auth.ts",
      "maxCoChangedFiles": 0,
      "totalCommits": 3,
    },
  ],
}
`;

exports[`fixture regression > bus factor report is stable 1`] = `
{
  "criticalFiles": [
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/api.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/index.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/helpers.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "bob@example.com",
      ],
      "dominantAuthor": "bob@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/__tests__/api.test.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "bob@example.com",
      ],
      "dominantAuthor": "bob@example.com",
      "dominantAuthorPercent": 100,
      "file": "docs/USAGE.md",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/config.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "charlie@example.com",
      ],
      "dominantAuthor": "charlie@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/auth.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "README.md",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "package.json",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
  ],
  "files": [
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/api.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/index.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/helpers.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "bob@example.com",
      ],
      "dominantAuthor": "bob@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/__tests__/api.test.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "bob@example.com",
      ],
      "dominantAuthor": "bob@example.com",
      "dominantAuthorPercent": 100,
      "file": "docs/USAGE.md",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/config.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "charlie@example.com",
      ],
      "dominantAuthor": "charlie@example.com",
      "dominantAuthorPercent": 100,
      "file": "src/auth.ts",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "README.md",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 100,
      "file": "package.json",
      "risk": "critical",
      "uniqueAuthors": 1,
    },
    {
      "authors": [
        "alice@example.com",
        "bob@example.com",
      ],
      "dominantAuthor": "alice@example.com",
      "dominantAuthorPercent": 50,
      "file": "src/types.ts",
      "risk": "medium",
      "uniqueAuthors": 2,
    },
  ],
  "overallBusFactor": 1,
  "summary": "9 files are owned by a single author — src/api.ts is most at risk",
}
`;

exports[`fixture regression > churn report is stable 1`] = `
{
  "files": [
    {
      "category": "hot",
      "churnScore": 100,
      "commitCount": 6,
      "file": "src/helpers.ts",
    },
    {
      "category": "hot",
      "churnScore": 83,
      "commitCount": 5,
      "file": "src/index.ts",
    },
    {
      "category": "warm",
      "churnScore": 67,
      "commitCount": 4,
      "file": "src/api.ts",
    },
    {
      "category": "warm",
      "churnScore": 67,
      "commitCount": 4,
      "file": "src/config.ts",
    },
    {
      "category": "warm",
      "churnScore": 50,
      "commitCount": 3,
      "file": "src/auth.ts",
    },
    {
      "category": "cold",
      "churnScore": 33,
      "commitCount": 2,
      "file": "src/__tests__/api.test.ts",
    },
    {
      "category": "cold",
      "churnScore": 33,
      "commitCount": 2,
      "file": "src/types.ts",
    },
    {
      "category": "cold",
      "churnScore": 17,
      "commitCount": 1,
      "file": "docs/USAGE.md",
    },
    {
      "category": "cold",
      "churnScore": 17,
      "commitCount": 1,
      "file": "README.md",
    },
    {
      "category": "cold",
      "churnScore": 17,
      "commitCount": 1,
      "file": "package.json",
    },
  ],
  "hotspotCount": 2,
  "summary": "src/helpers.ts has been modified in 30% of all commits",
  "topFiles": [
    {
      "category": "hot",
      "churnScore": 100,
      "commitCount": 6,
      "file": "src/helpers.ts",
    },
    {
      "category": "hot",
      "churnScore": 83,
      "commitCount": 5,
      "file": "src/index.ts",
    },
    {
      "category": "warm",
      "churnScore": 67,
      "commitCount": 4,
      "file": "src/api.ts",
    },
    {
      "category": "warm",
      "churnScore": 67,
      "commitCount": 4,
      "file": "src/config.ts",
    },
    {
      "category": "warm",
      "churnScore": 50,
      "commitCount": 3,
      "file": "src/auth.ts",
    },
    {
      "category": "cold",
      "churnScore": 33,
      "commitCount": 2,
      "file": "src/__tests__/api.test.ts",
    },
    {
      "category": "cold",
      "churnScore": 33,
      "commitCount": 2,
      "file": "src/types.ts",
    },
    {
      "category": "cold",
      "churnScore": 17,
      "commitCount": 1,
      "file": "docs/USAGE.md",
    },
    {
      "category": "cold",
      "churnScore": 17,
      "commitCount": 1,
      "file": "README.md",
    },
    {
      "category": "cold",
      "churnScore": 17,
      "commitCount": 1,
      "file": "package.json",
    },
  ],
}
`;

exports[`fixture regression > churn velocity report is stable 1`] = `
{
  "acceleratingFiles": [
    {
      "file": "src/helpers.ts",
      "olderCommits": 0,
      "recentCommits": 6,
      "totalCommits": 6,
      "trend": "accelerating",
      "velocityScore": 100,
    },
  ],
  "files": [
    {
      "file": "src/helpers.ts",
      "olderCommits": 0,
      "recentCommits": 6,
      "totalCommits": 6,
      "trend": "accelerating",
      "velocityScore": 100,
    },
    {
      "file": "src/index.ts",
      "olderCommits": 2,
      "recentCommits": 3,
      "totalCommits": 5,
      "trend": "stable",
      "velocityScore": 60,
    },
    {
      "file": "src/api.ts",
      "olderCommits": 2,
      "recentCommits": 2,
      "totalCommits": 4,
      "trend": "stable",
      "velocityScore": 50,
    },
    {
      "file": "src/__tests__/api.test.ts",
      "olderCommits": 1,
      "recentCommits": 1,
      "totalCommits": 2,
      "trend": "stable",
      "velocityScore": 50,
    },
    {
      "file": "src/types.ts",
      "olderCommits": 1,
      "recentCommits": 1,
      "totalCommits": 2,
      "trend": "stable",
      "velocityScore": 50,
    },
    {
      "file": "src/config.ts",
      "olderCommits": 3,
      "recentCommits": 1,
      "totalCommits": 4,
      "trend": "decelerating",
      "velocityScore": 25,
    },
    {
      "file": "src/auth.ts",
      "olderCommits": 3,
      "recentCommits": 0,
      "totalCommits": 3,
      "trend": "decelerating",
      "velocityScore": 0,
    },
  ],
  "summary": "1 file accelerating, 2 decelerating",
}
`;

exports[`fixture regression > co-authors report is stable 1`] = `
{
  "authorStats": [],
  "pairs": [],
  "summary": "No co-authored commits found",
  "totalCoAuthoredCommits": 0,
}
`;

exports[`fixture regression > commit timing report is stable 1`] = `
{
  "files": [
    {
      "file": "src/api.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        2,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "lateNightPercent": 0,
      "peakDay": 0,
      "peakHour": 10,
      "stressScore": 40,
      "totalCommits": 4,
      "weekendPercent": 100,
    },
    {
      "file": "src/auth.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        1,
      ],
      "lateNightPercent": 33,
      "peakDay": 0,
      "peakHour": 14,
      "stressScore": 33,
      "totalCommits": 3,
      "weekendPercent": 33,
    },
    {
      "file": "src/config.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        2,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "lateNightPercent": 0,
      "peakDay": 0,
      "peakHour": 9,
      "stressScore": 20,
      "totalCommits": 4,
      "weekendPercent": 50,
    },
    {
      "file": "src/index.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        1,
        0,
        0,
        1,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "lateNightPercent": 0,
      "peakDay": 0,
      "peakHour": 9,
      "stressScore": 16,
      "totalCommits": 5,
      "weekendPercent": 40,
    },
    {
      "file": "src/helpers.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        1,
        1,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "lateNightPercent": 0,
      "peakDay": 0,
      "peakHour": 8,
      "stressScore": 13,
      "totalCommits": 6,
      "weekendPercent": 33,
    },
  ],
  "repoLateNightPercent": 5,
  "repoWeekendPercent": 35,
  "stressFiles": [
    {
      "file": "src/api.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        2,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "lateNightPercent": 0,
      "peakDay": 0,
      "peakHour": 10,
      "stressScore": 40,
      "totalCommits": 4,
      "weekendPercent": 100,
    },
    {
      "file": "src/auth.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        1,
      ],
      "lateNightPercent": 33,
      "peakDay": 0,
      "peakHour": 14,
      "stressScore": 33,
      "totalCommits": 3,
      "weekendPercent": 33,
    },
    {
      "file": "src/config.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        2,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "lateNightPercent": 0,
      "peakDay": 0,
      "peakHour": 9,
      "stressScore": 20,
      "totalCommits": 4,
      "weekendPercent": 50,
    },
    {
      "file": "src/index.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        1,
        0,
        0,
        1,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "lateNightPercent": 0,
      "peakDay": 0,
      "peakHour": 9,
      "stressScore": 16,
      "totalCommits": 5,
      "weekendPercent": 40,
    },
    {
      "file": "src/helpers.ts",
      "hourDistribution": [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        2,
        1,
        1,
        0,
        0,
        0,
        0,
        0,
        1,
        1,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "lateNightPercent": 0,
      "peakDay": 0,
      "peakHour": 8,
      "stressScore": 13,
      "totalCommits": 6,
      "weekendPercent": 33,
    },
  ],
  "summary": "5% of commits happen after hours, 35% on weekends",
}
`;

exports[`fixture regression > complexity trend report is stable 1`] = `
{
  "files": [
    {
      "buckets": [
        {
          "cumulative": 8,
          "month": "2026-01",
          "netLines": 8,
        },
        {
          "cumulative": 13,
          "month": "2026-02",
          "netLines": 5,
        },
      ],
      "file": "src/auth.ts",
      "recentGrowthRate": 7,
      "totalNetLines": 13,
      "trend": "growing",
    },
    {
      "buckets": [
        {
          "cumulative": 10,
          "month": "2026-01",
          "netLines": 10,
        },
        {
          "cumulative": 13,
          "month": "2026-02",
          "netLines": 3,
        },
      ],
      "file": "src/config.ts",
      "recentGrowthRate": 7,
      "totalNetLines": 13,
      "trend": "growing",
    },
    {
      "buckets": [
        {
          "cumulative": 7,
          "month": "2026-02",
          "netLines": 7,
        },
        {
          "cumulative": 12,
          "month": "2026-03",
          "netLines": 5,
        },
      ],
      "file": "src/__tests__/api.test.ts",
      "recentGrowthRate": 6,
      "totalNetLines": 12,
      "trend": "growing",
    },
    {
      "buckets": [
        {
          "cumulative": 5,
          "month": "2026-01",
          "netLines": 5,
        },
        {
          "cumulative": 9,
          "month": "2026-02",
          "netLines": 4,
        },
        {
          "cumulative": 15,
          "month": "2026-03",
          "netLines": 6,
        },
        {
          "cumulative": 16,
          "month": "2026-04",
          "netLines": 1,
        },
      ],
      "file": "src/api.ts",
      "recentGrowthRate": 4,
      "totalNetLines": 16,
      "trend": "stable",
    },
    {
      "buckets": [
        {
          "cumulative": 0,
          "month": "2026-02",
          "netLines": 0,
        },
        {
          "cumulative": 6,
          "month": "2026-03",
          "netLines": 6,
        },
        {
          "cumulative": 13,
          "month": "2026-04",
          "netLines": 7,
        },
      ],
      "file": "src/helpers.ts",
      "recentGrowthRate": 4,
      "totalNetLines": 13,
      "trend": "stable",
    },
    {
      "buckets": [
        {
          "cumulative": 1,
          "month": "2026-01",
          "netLines": 1,
        },
        {
          "cumulative": 7,
          "month": "2026-03",
          "netLines": 6,
        },
      ],
      "file": "src/types.ts",
      "recentGrowthRate": 4,
      "totalNetLines": 7,
      "trend": "stable",
    },
    {
      "buckets": [
        {
          "cumulative": 7,
          "month": "2026-01",
          "netLines": 7,
        },
        {
          "cumulative": 7,
          "month": "2026-02",
          "netLines": 0,
        },
        {
          "cumulative": 9,
          "month": "2026-03",
          "netLines": 2,
        },
        {
          "cumulative": 11,
          "month": "2026-04",
          "netLines": 2,
        },
      ],
      "file": "src/index.ts",
      "recentGrowthRate": 1,
      "totalNetLines": 11,
      "trend": "stable",
    },
  ],
  "growingFiles": [
    {
      "buckets": [
        {
          "cumulative": 8,
          "month": "2026-01",
          "netLines": 8,
        },
        {
          "cumulative": 13,
          "month": "2026-02",
          "netLines": 5,
        },
      ],
      "file": "src/auth.ts",
      "recentGrowthRate": 7,
      "totalNetLines": 13,
      "trend": "growing",
    },
    {
      "buckets": [
        {
          "cumulative": 10,
          "month": "2026-01",
          "netLines": 10,
        },
        {
          "cumulative": 13,
          "month": "2026-02",
          "netLines": 3,
        },
      ],
      "file": "src/config.ts",
      "recentGrowthRate": 7,
      "totalNetLines": 13,
      "trend": "growing",
    },
    {
      "buckets": [
        {
          "cumulative": 7,
          "month": "2026-02",
          "netLines": 7,
        },
        {
          "cumulative": 12,
          "month": "2026-03",
          "netLines": 5,
        },
      ],
      "file": "src/__tests__/api.test.ts",
      "recentGrowthRate": 6,
      "totalNetLines": 12,
      "trend": "growing",
    },
  ],
  "shrinkingFiles": [],
  "summary": "3 files growing, 0 shrinking, 4 stable",
}
`;

exports[`fixture regression > contributors report is stable 1`] = `
{
  "activeContributors": [
    {
      "activeDays": 13,
      "commitCount": 13,
      "email": "alice@example.com",
      "filesOwned": 7,
      "firstCommit": "2026-01-01T09:00:00Z",
      "focusAreas": [
        "src/helpers.ts",
        "src/index.ts",
        "src/api.ts",
      ],
      "isActive": true,
      "lastCommit": "2026-04-05T15:30:00Z",
      "linesChanged": 116,
      "name": "Alice",
    },
    {
      "activeDays": 4,
      "commitCount": 4,
      "email": "bob@example.com",
      "filesOwned": 2,
      "firstCommit": "2026-01-15T16:45:00Z",
      "focusAreas": [
        "src/__tests__",
        "docs/USAGE.md",
        "src/types.ts",
      ],
      "isActive": true,
      "lastCommit": "2026-03-25T13:00:00Z",
      "linesChanged": 18,
      "name": "Bob",
    },
    {
      "activeDays": 3,
      "commitCount": 3,
      "email": "charlie@example.com",
      "filesOwned": 1,
      "firstCommit": "2026-01-05T14:30:00Z",
      "focusAreas": [
        "src/auth.ts",
      ],
      "isActive": true,
      "lastCommit": "2026-02-05T23:15:00Z",
      "linesChanged": 15,
      "name": "Charlie",
    },
  ],
  "contributors": [
    {
      "activeDays": 13,
      "commitCount": 13,
      "email": "alice@example.com",
      "filesOwned": 7,
      "firstCommit": "2026-01-01T09:00:00Z",
      "focusAreas": [
        "src/helpers.ts",
        "src/index.ts",
        "src/api.ts",
      ],
      "isActive": true,
      "lastCommit": "2026-04-05T15:30:00Z",
      "linesChanged": 116,
      "name": "Alice",
    },
    {
      "activeDays": 4,
      "commitCount": 4,
      "email": "bob@example.com",
      "filesOwned": 2,
      "firstCommit": "2026-01-15T16:45:00Z",
      "focusAreas": [
        "src/__tests__",
        "docs/USAGE.md",
        "src/types.ts",
      ],
      "isActive": true,
      "lastCommit": "2026-03-25T13:00:00Z",
      "linesChanged": 18,
      "name": "Bob",
    },
    {
      "activeDays": 3,
      "commitCount": 3,
      "email": "charlie@example.com",
      "filesOwned": 1,
      "firstCommit": "2026-01-05T14:30:00Z",
      "focusAreas": [
        "src/auth.ts",
      ],
      "isActive": true,
      "lastCommit": "2026-02-05T23:15:00Z",
      "linesChanged": 15,
      "name": "Charlie",
    },
  ],
  "ghostContributors": [],
  "summary": "3 contributors — 3 actively committing",
  "topContributor": {
    "activeDays": 13,
    "commitCount": 13,
    "email": "alice@example.com",
    "filesOwned": 7,
    "firstCommit": "2026-01-01T09:00:00Z",
    "focusAreas": [
      "src/helpers.ts",
      "src/index.ts",
      "src/api.ts",
    ],
    "isActive": true,
    "lastCommit": "2026-04-05T15:30:00Z",
    "linesChanged": 116,
    "name": "Alice",
  },
}
`;

exports[`fixture regression > coupling report is stable 1`] = `
{
  "fileProfiles": [],
  "pairs": [],
  "summary": "No temporal coupling detected",
  "topPairs": [],
}
`;

exports[`fixture regression > cursed files list is stable 1`] = `
[
  {
    "ageDays": 30,
    "authors": 1,
    "churn": 6,
    "curseScore": 85,
    "file": "src/helpers.ts",
    "narrative": "src/helpers.ts has been touched in 30% of all commits by a single author. That person is a single point of failure.",
    "reasons": [
      "Modified in 30% of all commits",
      "Single author owns 100% of changes",
      "4 shame commits detected ("hack" appears repeatedly) — this file keeps breaking",
    ],
  },
  {
    "ageDays": 25,
    "authors": 1,
    "churn": 5,
    "curseScore": 65,
    "file": "src/index.ts",
    "narrative": "src/index.ts has been touched in 25% of all commits by a single author. That person is a single point of failure.",
    "reasons": [
      "Modified in 25% of all commits",
      "Single author owns 100% of changes",
    ],
  },
  {
    "ageDays": 70,
    "authors": 1,
    "churn": 4,
    "curseScore": 65,
    "file": "src/config.ts",
    "narrative": "src/config.ts has seen 4 commits from 1 author — worth keeping an eye on.",
    "reasons": [
      "Frequently modified (4 commits)",
      "Single author owns 100% of changes",
      "1 shame commits detected ("hack" appears repeatedly) — this file keeps breaking",
    ],
  },
  {
    "ageDays": 84,
    "authors": 1,
    "churn": 3,
    "curseScore": 65,
    "file": "src/auth.ts",
    "narrative": "src/auth.ts has seen 3 commits from 1 author — worth keeping an eye on.",
    "reasons": [
      "Frequently modified (3 commits)",
      "Single author owns 100% of changes",
      "2 shame commits detected ("fix" appears repeatedly) — this file keeps breaking",
    ],
  },
]
`;

exports[`fixture regression > dead code report is stable 1`] = `
{
  "candidates": [],
  "summary": "No dead code candidates found",
  "totalDeadFiles": 0,
  "totalDeadLines": 0,
}
`;

exports[`fixture regression > forensics report is stable 1`] = `
{
  "byMonth": [
    {
      "critical": 0,
      "mild": 1,
      "moderate": 0,
      "month": "2026-01",
    },
    {
      "critical": 1,
      "mild": 0,
      "moderate": 2,
      "month": "2026-02",
    },
    {
      "critical": 1,
      "mild": 1,
      "moderate": 0,
      "month": "2026-03",
    },
  ],
  "files": [
    {
      "dominantKeywords": [
        "fix",
        "workaround",
        "bug",
      ],
      "file": "src/auth.ts",
      "rawShamePoints": 5,
      "shameCommitCount": 2,
      "shameScore": 100,
      "topShameCommits": [
        {
          "date": "2026-02-05T23:15:00Z",
          "hash": "<SHA>",
          "keywords": [
            "workaround",
            "fix",
          ],
          "message": "fix: auth race condition workaround",
          "shamePoints": 3,
        },
        {
          "date": "2026-01-25T20:30:00Z",
          "hash": "<SHA>",
          "keywords": [
            "fix",
            "bug",
          ],
          "message": "fix: auth null token bug",
          "shamePoints": 2,
        },
      ],
    },
    {
      "dominantKeywords": [
        "hack",
        "hotfix",
        "cleanup",
      ],
      "file": "src/helpers.ts",
      "rawShamePoints": 13,
      "shameCommitCount": 4,
      "shameScore": 100,
      "topShameCommits": [
        {
          "date": "2026-02-25T17:00:00Z",
          "hash": "<SHA>",
          "keywords": [
            "revert",
            "hack",
          ],
          "message": "revert: remove name fallback hack",
          "shamePoints": 5,
        },
        {
          "date": "2026-02-20T08:30:00Z",
          "hash": "<SHA>",
          "keywords": [
            "hack",
            "workaround",
          ],
          "message": "hack: workaround for empty names",
          "shamePoints": 4,
        },
        {
          "date": "2026-03-15T16:45:00Z",
          "hash": "<SHA>",
          "keywords": [
            "hotfix",
          ],
          "message": "hotfix: truncate handles zero length",
          "shamePoints": 3,
        },
      ],
    },
    {
      "dominantKeywords": [
        "hack",
        "workaround",
      ],
      "file": "src/config.ts",
      "rawShamePoints": 4,
      "shameCommitCount": 1,
      "shameScore": 80,
      "topShameCommits": [
        {
          "date": "2026-02-20T08:30:00Z",
          "hash": "<SHA>",
          "keywords": [
            "hack",
            "workaround",
          ],
          "message": "hack: workaround for empty names",
          "shamePoints": 4,
        },
      ],
    },
    {
      "dominantKeywords": [
        "cleanup",
      ],
      "file": "src/api.ts",
      "rawShamePoints": 1,
      "shameCommitCount": 1,
      "shameScore": 20,
      "topShameCommits": [
        {
          "date": "2026-03-01T10:00:00Z",
          "hash": "<SHA>",
          "keywords": [
            "cleanup",
          ],
          "message": "refactor: cross-module cleanup",
          "shamePoints": 1,
        },
      ],
    },
    {
      "dominantKeywords": [
        "cleanup",
      ],
      "file": "src/index.ts",
      "rawShamePoints": 1,
      "shameCommitCount": 1,
      "shameScore": 20,
      "topShameCommits": [
        {
          "date": "2026-03-01T10:00:00Z",
          "hash": "<SHA>",
          "keywords": [
            "cleanup",
          ],
          "message": "refactor: cross-module cleanup",
          "shamePoints": 1,
        },
      ],
    },
  ],
  "keywordTiers": {
    "critical": 2,
    "mild": 2,
    "moderate": 2,
  },
  "shameLeaderboard": [
    {
      "dominantKeywords": [
        "hack",
        "hotfix",
        "cleanup",
      ],
      "file": "src/helpers.ts",
      "rawShamePoints": 13,
      "shameCommitCount": 4,
      "shameScore": 100,
      "topShameCommits": [
        {
          "date": "2026-02-25T17:00:00Z",
          "hash": "<SHA>",
          "keywords": [
            "revert",
            "hack",
          ],
          "message": "revert: remove name fallback hack",
          "shamePoints": 5,
        },
        {
          "date": "2026-02-20T08:30:00Z",
          "hash": "<SHA>",
          "keywords": [
            "hack",
            "workaround",
          ],
          "message": "hack: workaround for empty names",
          "shamePoints": 4,
        },
        {
          "date": "2026-03-15T16:45:00Z",
          "hash": "<SHA>",
          "keywords": [
            "hotfix",
          ],
          "message": "hotfix: truncate handles zero length",
          "shamePoints": 3,
        },
      ],
    },
    {
      "dominantKeywords": [
        "cleanup",
      ],
      "file": "src/index.ts",
      "rawShamePoints": 1,
      "shameCommitCount": 1,
      "shameScore": 20,
      "topShameCommits": [
        {
          "date": "2026-03-01T10:00:00Z",
          "hash": "<SHA>",
          "keywords": [
            "cleanup",
          ],
          "message": "refactor: cross-module cleanup",
          "shamePoints": 1,
        },
      ],
    },
  ],
  "summary": "src/helpers.ts has the highest shame score (100/100) with 4 flagged commits.",
  "totalShameCommits": 6,
}
`;

exports[`fixture regression > ghost files report is stable 1`] = `
{
  "files": [],
  "summary": "No ghost files detected",
  "totalGhostFiles": 0,
}
`;

exports[`fixture regression > hotspot clusters report is stable 1`] = `
{
  "clusters": [
    {
      "clusterScore": 308,
      "dimension": "ownership",
      "label": "alice@example.com (avg 93%)",
      "members": [
        {
          "file": "src/helpers.ts",
          "hotspotScore": 100,
        },
        {
          "file": "src/index.ts",
          "hotspotScore": 63,
        },
        {
          "file": "src/api.ts",
          "hotspotScore": 58,
        },
        {
          "file": "src/config.ts",
          "hotspotScore": 54,
        },
        {
          "file": "src/types.ts",
          "hotspotScore": 20,
        },
        {
          "file": "package.json",
          "hotspotScore": 9,
        },
        {
          "file": "README.md",
          "hotspotScore": 6,
        },
      ],
      "narrative": "alice@example.com owns 7 of the top 20 hotspots (avg 93% ownership). Either they're the team's most critical contributor or they're spreading complexity.",
      "sharedTrait": "alice@example.com",
    },
    {
      "clusterScore": 164,
      "dimension": "temporal",
      "label": "Mar 2026 inflection",
      "members": [
        {
          "file": "src/index.ts",
          "hotspotScore": 63,
        },
        {
          "file": "src/helpers.ts",
          "hotspotScore": 100,
        },
      ],
      "narrative": "2 hotspots started accelerating in Mar 2026. Something happened that month — a migration, a feature push, or a staffing change — that destabilized multiple files simultaneously.",
      "sharedTrait": "2026-03",
    },
    {
      "clusterScore": 32,
      "dimension": "ownership",
      "label": "bob@example.com (avg 100%)",
      "members": [
        {
          "file": "src/__tests__/api.test.ts",
          "hotspotScore": 26,
        },
        {
          "file": "docs/USAGE.md",
          "hotspotScore": 6,
        },
      ],
      "narrative": "bob@example.com owns 2 of the top 20 hotspots (avg 100% ownership). Either they're the team's most critical contributor or they're spreading complexity.",
      "sharedTrait": "bob@example.com",
    },
  ],
  "multiSignalFiles": [
    {
      "clusterCount": 2,
      "dimensions": [
        "ownership",
        "temporal",
      ],
      "file": "src/helpers.ts",
    },
    {
      "clusterCount": 2,
      "dimensions": [
        "ownership",
        "temporal",
      ],
      "file": "src/index.ts",
    },
  ],
  "summary": "3 root cause clusters found across 2 dimensions. \`alice@example.com (avg 93%)\` (ownership) explains the most hotspots. \`src/helpers.ts\` appears in 2 clusters across 2 dimensions (ownership, temporal) — strongest candidate for intervention.",
}
`;

exports[`fixture regression > hotspot report is stable 1`] = `
{
  "files": [
    {
      "category": "critical",
      "churnScore": 100,
      "file": "src/helpers.ts",
      "hotspotScore": 100,
      "loc": 24,
    },
    {
      "category": "warning",
      "churnScore": 83,
      "file": "src/index.ts",
      "hotspotScore": 63,
      "loc": 11,
    },
    {
      "category": "warning",
      "churnScore": 67,
      "file": "src/api.ts",
      "hotspotScore": 58,
      "loc": 16,
    },
    {
      "category": "warning",
      "churnScore": 67,
      "file": "src/config.ts",
      "hotspotScore": 54,
      "loc": 13,
    },
    {
      "category": "moderate",
      "churnScore": 50,
      "file": "src/auth.ts",
      "hotspotScore": 40,
      "loc": 13,
    },
    {
      "category": "moderate",
      "churnScore": 33,
      "file": "src/__tests__/api.test.ts",
      "hotspotScore": 26,
      "loc": 12,
    },
    {
      "category": "low",
      "churnScore": 33,
      "file": "src/types.ts",
      "hotspotScore": 20,
      "loc": 7,
    },
    {
      "category": "low",
      "churnScore": 17,
      "file": "package.json",
      "hotspotScore": 9,
      "loc": 5,
    },
    {
      "category": "low",
      "churnScore": 17,
      "file": "docs/USAGE.md",
      "hotspotScore": 6,
      "loc": 3,
    },
    {
      "category": "low",
      "churnScore": 17,
      "file": "README.md",
      "hotspotScore": 6,
      "loc": 3,
    },
  ],
  "summary": "1 critical hotspot, 3 warnings across 10 files",
  "topHotspots": [
    {
      "category": "critical",
      "churnScore": 100,
      "file": "src/helpers.ts",
      "hotspotScore": 100,
      "loc": 24,
    },
    {
      "category": "warning",
      "churnScore": 83,
      "file": "src/index.ts",
      "hotspotScore": 63,
      "loc": 11,
    },
    {
      "category": "warning",
      "churnScore": 67,
      "file": "src/api.ts",
      "hotspotScore": 58,
      "loc": 16,
    },
    {
      "category": "warning",
      "churnScore": 67,
      "file": "src/config.ts",
      "hotspotScore": 54,
      "loc": 13,
    },
    {
      "category": "moderate",
      "churnScore": 50,
      "file": "src/auth.ts",
      "hotspotScore": 40,
      "loc": 13,
    },
    {
      "category": "moderate",
      "churnScore": 33,
      "file": "src/__tests__/api.test.ts",
      "hotspotScore": 26,
      "loc": 12,
    },
    {
      "category": "low",
      "churnScore": 33,
      "file": "src/types.ts",
      "hotspotScore": 20,
      "loc": 7,
    },
    {
      "category": "low",
      "churnScore": 17,
      "file": "package.json",
      "hotspotScore": 9,
      "loc": 5,
    },
    {
      "category": "low",
      "churnScore": 17,
      "file": "docs/USAGE.md",
      "hotspotScore": 6,
      "loc": 3,
    },
    {
      "category": "low",
      "churnScore": 17,
      "file": "README.md",
      "hotspotScore": 6,
      "loc": 3,
    },
  ],
}
`;

exports[`fixture regression > knowledge concentration report is stable 1`] = `
{
  "concentrationIndex": 90,
  "singleAuthorFiles": 9,
  "summary": "90% of files are single-author dominant (9/10)",
  "totalFiles": 10,
}
`;

exports[`fixture regression > loc report is stable 1`] = `
{
  "files": [
    {
      "file": "README.md",
      "language": "Markdown",
      "lines": 3,
    },
    {
      "file": "docs/USAGE.md",
      "language": "Markdown",
      "lines": 3,
    },
    {
      "file": "package.json",
      "language": "JSON",
      "lines": 5,
    },
    {
      "file": "src/__tests__/api.test.ts",
      "language": "TypeScript",
      "lines": 12,
    },
    {
      "file": "src/api.ts",
      "language": "TypeScript",
      "lines": 16,
    },
    {
      "file": "src/auth.ts",
      "language": "TypeScript",
      "lines": 13,
    },
    {
      "file": "src/config.ts",
      "language": "TypeScript",
      "lines": 13,
    },
    {
      "file": "src/helpers.ts",
      "language": "TypeScript",
      "lines": 24,
    },
    {
      "file": "src/index.ts",
      "language": "TypeScript",
      "lines": 11,
    },
    {
      "file": "src/types.ts",
      "language": "TypeScript",
      "lines": 7,
    },
  ],
  "languages": [
    {
      "files": 7,
      "language": "TypeScript",
      "lines": 96,
      "percentage": 89.7,
    },
    {
      "files": 2,
      "language": "Markdown",
      "lines": 6,
      "percentage": 5.6,
    },
    {
      "files": 1,
      "language": "JSON",
      "lines": 5,
      "percentage": 4.7,
    },
  ],
  "summary": "107 lines across 10 files (90% TypeScript, 6% Markdown)",
  "totalFiles": 10,
  "totalLines": 107,
}
`;

exports[`fixture regression > meta shape is stable 1`] = `
{
  "ageInDays": 94,
  "analyzedBranch": "main",
  "branches": [
    "main",
  ],
  "firstCommit": "2026-01-01T09:00:00Z",
  "gitrelicVersion": "0.1.0",
  "lastCommit": "2026-04-05T15:30:00Z",
  "primaryLanguage": "TypeScript",
  "totalAuthors": 3,
  "totalCommits": 20,
  "totalFiles": 10,
}
`;

exports[`fixture regression > parallel dev report is stable 1`] = `
{
  "files": [],
  "hotFiles": [],
  "summary": "No significant parallel development detected.",
  "totalParallelFiles": 0,
}
`;

exports[`fixture regression > rename tracking report is stable 1`] = `
{
  "chains": [
    {
      "currentPath": "src/helpers.ts",
      "previousNames": [
        "src/utils.ts",
      ],
      "renameCount": 1,
    },
  ],
  "filesWithRenames": 1,
  "renames": [
    {
      "commitHash": "<SHA>",
      "date": "2026-02-10T13:20:00Z",
      "newPath": "src/helpers.ts",
      "oldPath": "src/utils.ts",
    },
  ],
  "summary": "1 file has been renamed 1 time total",
  "totalRenames": 1,
}
`;

exports[`fixture regression > rewrite ratio report is stable 1`] = `
{
  "files": [
    {
      "file": "src/index.ts",
      "ratio": 0.42,
      "rewriteScore": 42,
      "totalDeletions": 8,
      "totalInsertions": 19,
    },
    {
      "file": "src/helpers.ts",
      "ratio": 0.35,
      "rewriteScore": 35,
      "totalDeletions": 7,
      "totalInsertions": 20,
    },
    {
      "file": "src/api.ts",
      "ratio": 0.11,
      "rewriteScore": 11,
      "totalDeletions": 2,
      "totalInsertions": 18,
    },
    {
      "file": "src/__tests__/api.test.ts",
      "ratio": 0.08,
      "rewriteScore": 8,
      "totalDeletions": 1,
      "totalInsertions": 13,
    },
    {
      "file": "src/config.ts",
      "ratio": 0.07,
      "rewriteScore": 7,
      "totalDeletions": 1,
      "totalInsertions": 14,
    },
    {
      "file": "src/auth.ts",
      "ratio": 0.07,
      "rewriteScore": 7,
      "totalDeletions": 1,
      "totalInsertions": 14,
    },
    {
      "file": "src/types.ts",
      "ratio": 0,
      "rewriteScore": 0,
      "totalDeletions": 0,
      "totalInsertions": 7,
    },
    {
      "file": "docs/USAGE.md",
      "ratio": 0,
      "rewriteScore": 0,
      "totalDeletions": 0,
      "totalInsertions": 3,
    },
    {
      "file": "README.md",
      "ratio": 0,
      "rewriteScore": 0,
      "totalDeletions": 0,
      "totalInsertions": 3,
    },
    {
      "file": "package.json",
      "ratio": 0,
      "rewriteScore": 0,
      "totalDeletions": 0,
      "totalInsertions": 5,
    },
  ],
  "summary": "0 files with high rewrite ratio (code that doesn't stick)",
  "topRewriters": [
    {
      "file": "src/index.ts",
      "ratio": 0.42,
      "rewriteScore": 42,
      "totalDeletions": 8,
      "totalInsertions": 19,
    },
    {
      "file": "src/helpers.ts",
      "ratio": 0.35,
      "rewriteScore": 35,
      "totalDeletions": 7,
      "totalInsertions": 20,
    },
    {
      "file": "src/api.ts",
      "ratio": 0.11,
      "rewriteScore": 11,
      "totalDeletions": 2,
      "totalInsertions": 18,
    },
    {
      "file": "src/__tests__/api.test.ts",
      "ratio": 0.08,
      "rewriteScore": 8,
      "totalDeletions": 1,
      "totalInsertions": 13,
    },
    {
      "file": "src/config.ts",
      "ratio": 0.07,
      "rewriteScore": 7,
      "totalDeletions": 1,
      "totalInsertions": 14,
    },
    {
      "file": "src/auth.ts",
      "ratio": 0.07,
      "rewriteScore": 7,
      "totalDeletions": 1,
      "totalInsertions": 14,
    },
    {
      "file": "src/types.ts",
      "ratio": 0,
      "rewriteScore": 0,
      "totalDeletions": 0,
      "totalInsertions": 7,
    },
    {
      "file": "docs/USAGE.md",
      "ratio": 0,
      "rewriteScore": 0,
      "totalDeletions": 0,
      "totalInsertions": 3,
    },
    {
      "file": "README.md",
      "ratio": 0,
      "rewriteScore": 0,
      "totalDeletions": 0,
      "totalInsertions": 3,
    },
    {
      "file": "package.json",
      "ratio": 0,
      "rewriteScore": 0,
      "totalDeletions": 0,
      "totalInsertions": 5,
    },
  ],
}
`;

exports[`fixture regression > test coverage report is stable 1`] = `
{
  "directories": [
    {
      "coverageRatio": 0,
      "directory": "src/__tests__",
      "hasTests": true,
      "sourceFiles": 0,
      "testFiles": 1,
    },
    {
      "coverageRatio": 0,
      "directory": "src",
      "hasTests": false,
      "sourceFiles": 6,
      "testFiles": 0,
    },
  ],
  "files": [
    {
      "file": "src/api.ts",
      "hasTestSibling": true,
    },
    {
      "file": "src/auth.ts",
      "hasTestSibling": false,
    },
    {
      "file": "src/config.ts",
      "hasTestSibling": false,
    },
    {
      "file": "src/helpers.ts",
      "hasTestSibling": false,
    },
    {
      "file": "src/index.ts",
      "hasTestSibling": false,
    },
    {
      "file": "src/types.ts",
      "hasTestSibling": false,
    },
  ],
  "overallRatio": 0.17,
  "summary": "1 directory with source files but no tests",
  "uncoveredDirectories": [
    {
      "coverageRatio": 0,
      "directory": "src",
      "hasTests": false,
      "sourceFiles": 6,
      "testFiles": 0,
    },
  ],
}
`;

exports[`fixture regression > top-level report keys are stable 1`] = `
[
  "ageMap",
  "blastRadius",
  "busFactors",
  "churn",
  "churnVelocity",
  "coAuthors",
  "commitTiming",
  "commits",
  "complexityTrend",
  "contributors",
  "coupling",
  "cursedFiles",
  "deadCode",
  "forensics",
  "ghostFiles",
  "hotspotClusters",
  "hotspots",
  "knowledgeConcentration",
  "loc",
  "meta",
  "parallelDev",
  "renameTracking",
  "repoName",
  "repoPath",
  "rewriteRatio",
  "testCoverage",
  "timestamp",
]
`;
